# GPUE

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  gpue_doxy.conf  vtx_standalone.cu  vtx_standalone.md
cs_test_code/: .gitignore  Makefile  readme.txt
cs_test_code/src/: compressed.cu  compressed.h  cs_utils.cu  cs_utils.h  logConfigTEST.config  main.cpp  mxutils.cu  sampler.cu  sampler.h  split_step.cu  split_step.h  twoParticlesInHO_Ham.cu  wavefunction.cu  wavefunction.h
cs_test_code/src/unittest/: NotNormPsiIm.csv  NotNormPsiRe.csv  VortexSampledIm.csv  VortexSampledRe.csv  buschStateEn1.csv  buschStateEn1_7.csv  compressorTest.cu  csutilsTest.cu  expV1stepImag.csv  expV1stepReal.csv  expVFFTImag.csv  expVFFTReal.csv  expVImag.csv  expVPsiImag.csv  expVPsiReal.csv  expVReal.csv  hamiltonianTest.cu  mxutilsTest.cu  psiIm.csv  samplerTest.cu  split_stepTest.cu  testMain.cu  wavefunctionTest.cu
cuda/: .gpu_functions.cu.swp  .test_gpue_functions.cu.swp  gpu_functions.cu  gpueFunctions.cu  test_gpue_functions.cu  wfc.cc
include/: _host.h  constants.h  ds.h  evolution.h  fileIO.h  gpu_functions.h  host.h  init.h  kernels.h  lattice.h  manip.h  minions.h  operators.h  overdosing.hpp  split_op.h  state.hpp  tracker.h  vort.h  vortex_3d.h
julia/: calc_energy.jl
py/: gen_data.py  hist3d.py  load_data.py  mpi_vis.py  mpi_vis_dual.py  paraview_plot.py  plot.py  stats.py  vis.py  vis_scripts.py  vort.py  write_data.py
shell/: come_get_some.sh
src/: .evolution.cu.swp  .fileIO.cu.swp  .gpu_functions.cu.swp  .test_gpue_functions.cu.swp  .unit_test.cu.swp  CMakeLists.txt  ds.cu  evo_check  evolution.cu  fileIO.cu  gpu_functions.cu  gpueFunctions.h  helpfile  host.cc  host.cu  host_minions.cc  init.cu  kernels.cu  main.cc  main.cu  manip.cu  operators.cu  output.txt  parser.cu  split_op.cu  state.cc  test  test_gpue_functions.cu  tracker.cc  tracker.cu  unit_test.cu  vort.cc  vortex_3d.cu
src/bindings/: CMakeLists.txt  setup.py
src/bindings/PyGPUE/: CMakeLists.txt  __init__.py  gpue_pybind11.cu  latticegraph_pybind11.cu  param_parse.py  simulator_pybind11.cu
src/bindings/PyGPUE/io/: CMakeLists.txt  __init__.py  io_pybind11.cu
src/bindings/PyGPUE/pygpue_io/: CMakeLists.txt  io_pybind11.cu
src/bindings/PyGPUE/pygpue_simulator/: CMakeLists.txt  __init__.py  simulator_pybind11.cu
src/bindings/PyGPUE/pygpue_vortex/: CMakeLists.txt  __init__.py
src/bindings/PyGPUE/simulator/: CMakeLists.txt  simulator_pybind11.cu
src/bindings/PyGPUE/vortex/: CMakeLists.txt  __init__.py  latticegraph_pybind11.cu
src/colonel/: gpu_functions.cu
src/io/: CMakeLists.txt  README.md  fileIO.cu  parser.cu
src/simulator/: CMakeLists.txt  README.md  ds.cu  dynamic.cu  evolution.cu  init.cu  kernels.cu  manip.cu  minions.cu  operators.cu  split_op.cu
src/test.dSYM/Contents/Resources/DWARF/: test
src/tests/: CMakeLists.txt  README.md  file.txt  test  test_gpue_functions.cu  unit_test.cu
src/utils/: CMakeLists.txt  README.md  helpfile  print_help.sh
src/vortex/: CMakeLists.txt  README.md  VtxTest.cu  edge.cu  graphtest.cu  lattice.cu  node.cu  tracker.cu  vort.cu  vortex_3d.cu
src/vortex_lib/: CMakeLists.txt  vort.cu
